--- a/jlgl-spring-chart/templates/deployment.yaml
+++ b/jlgl-spring-chart/templates/deployment.yaml
@@ -72,6 +72,22 @@ spec:
           env:
             - name: JAVA_OPTS
               value: {{ .Values.JAVA_OPTS }}
+            - name: POD_ID
+              valueFrom:
+                fieldRef:
+                  apiVersion: v1
+                  fieldPath: metadata.uid
+            - name: POD_NAME
+              valueFrom:
+                fieldRef:
+                  apiVersion: v1
+                  fieldPath: metadata.name
+            - name: POD_NAMESPACE
+              valueFrom:
+                fieldRef:
+                  apiVersion: v1
+                  fieldPath: metadata.namespace
+                  
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
