--- a/jlgl-spring-chart/templates/deployment.yaml
+++ b/jlgl-spring-chart/templates/deployment.yaml
@@ -51,6 +51,13 @@ spec:
               protocol: TCP
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+          lifecycle:
+            preStop:
+              exec:
+                command:
+                - /bin/sh
+                - -c
+                - sh /data/bin/offline_nacos.sh
           livenessProbe:
             failureThreshold: {{ .Values.livenessProbe.failureThreshold }}
             periodSeconds: {{ .Values.livenessProbe.periodSeconds }}
