--- a/jlgl-spring-chart/templates/deployment.yaml
+++ b/jlgl-spring-chart/templates/deployment.yaml
@@ -79,11 +79,11 @@ spec:
           env:
             - name: JAVA_OPTS
               value: {{ .Values.JAVA_OPTS }}
-            - name: POD_ID
+            - name: POD_IP
               valueFrom:
                 fieldRef:
                   apiVersion: v1
-                  fieldPath: metadata.uid
+                  fieldPath: status.podIP
             - name: POD_NAME
               valueFrom:
                 fieldRef:
